<package format="3">
  <name>mapping_logger</name>
  <version>0.0.0</version>
  <description>VSLAM CSV Logger for Senior Design</description>
  <maintainer email="abbie@utexas.edu">Abbie Wang</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>v4l2_camera</exec_depend>
  <exec_depend>rtabmap_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>