<package format="3">
  <name>orbslam_bridge</name>
  <version>0.0.0</version>
  <description>Bridge for ORB-SLAM3 stdout to ROS 2</description>
  <maintainer email="andy@utexas.edu">Andy Shen</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>